@@ -27,7 +27,6 @@ import java.io.PrintWriter;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collection;
 import java.util.Comparator;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -35,10 +34,10 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.TreeMap;
+import java.util.TreeSet;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.regex.Pattern;
-import java.util.stream.Stream;
 import javax.inject.Inject;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
@@ -49,6 +48,7 @@ import org.apache.maven.artifact.DefaultArtifact;
 import org.apache.maven.artifact.handler.manager.ArtifactHandlerManager;
 import org.apache.maven.artifact.repository.ArtifactRepository;
 import org.apache.maven.execution.MavenSession;
+import org.apache.maven.model.Dependency;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.MojoFailureException;
 import org.apache.maven.plugins.annotations.Mojo;
@@ -70,6 +70,7 @@ import static java.util.stream.Collectors.toCollection;
 import static java.util.stream.Collectors.toList;
 import static org.apache.commons.lang3.StringUtils.EMPTY;
 import static org.apache.commons.lang3.StringUtils.isBlank;
+import static org.apache.commons.lang3.StringUtils.isNotBlank;
 import static org.apache.maven.plugins.annotations.LifecyclePhase.GENERATE_SOURCES;
 import static org.apache.maven.plugins.annotations.ResolutionScope.RUNTIME;
 
@@ -93,6 +94,9 @@ public class GenerateOptionsFileMojo extends AbstractJavadocMojo {
 
     @Parameter(property = "outputDirectory", defaultValue = "${project.build.directory}/javadoc-options")
     private File outputDirectory = null;
+
+    @Parameter(defaultValue = "false", property = "includeDependencyManagement")
+    private boolean includeDependencyManagement = false;
 
     @Parameter(required = false)
     private Link[] links = new Link[] { };
@@ -118,6 +122,8 @@ public class GenerateOptionsFileMojo extends AbstractJavadocMojo {
                     .collect(groupingBy(Map.Entry::getValue,
                                         mapping(Map.Entry::getKey, toList())));
 
+                set.removeAll(map.keySet());
+
                 generateOutput(set, map);
             } else {
                 log.info("Skipping javadoc options file generation.");
@@ -139,28 +145,61 @@ public class GenerateOptionsFileMojo extends AbstractJavadocMojo {
         Set<URL> set = new LinkedHashSet<>();
 
         for (Link link : links) {
-            List<URL> list =
-                project.getArtifacts().stream()
+            project.getArtifacts().stream()
                 .filter(link::include)
                 .map(link::getUrl)
-                .collect(toList());
+                .forEach(set::add);
+        }
 
-            set.addAll(list);
+        if (includeDependencyManagement) {
+            for (Link link : links) {
+                getDependencyManagementStream(project)
+                    .filter(t -> isNotBlank(t.getVersion()))
+                    .map(JavadocArtifact::new)
+                    .filter(link::include)
+                    .map(link::getUrl)
+                    .forEach(set::add);
+            }
         }
 
         return set;
     }
 
     private Map<Artifact,URL> getResolvedOfflinelinkMap() {
-        Map<Artifact,URL> map = new TreeMap<>(Comparator.comparing(ArtifactUtils::versionlessKey));
-        Set<Artifact> javadocs = getJavadocJarDependencyManagementSet();
+        TreeMap<Artifact,URL> map = new TreeMap<>(Comparator.comparing(ArtifactUtils::versionlessKey));
+
+        for (Offlinelink offlinelink : offlinelinks) {
+            project.getArtifacts().stream()
+                .filter(t -> Objects.equals(t.getType(), "jar"))
+                .filter(t -> Objects.equals(t.getClassifier(), "javadoc"))
+                .filter(offlinelink::include)
+                .forEach(t -> map.putIfAbsent(t, offlinelink.getUrl()));
+        }
+
+        Set<Artifact> artifacts =
+            project.getArtifacts().stream()
+            .filter(t -> Objects.equals(t.getType(), "jar"))
+            .filter(t -> isBlank(t.getClassifier()))
+            .map(JavadocArtifact::new)
+            .collect(toCollection(() -> new TreeSet<>(map.comparator())));
+
+        if (includeDependencyManagement) {
+            getDependencyManagementStream(project)
+                .filter(t -> Objects.equals(t.getType(), "jar"))
+                .filter(t -> isBlank(t.getClassifier()))
+                .filter(t -> isNotBlank(t.getVersion()))
+                .map(JavadocArtifact::new)
+                .forEach(artifacts::add);
+        }
+
+        artifacts.removeAll(map.keySet());
+
         ProjectBuildingRequest request = getProjectBuildingRequest();
 
         for (Offlinelink offlinelink : offlinelinks) {
             Set<Artifact> set =
-                javadocs.stream()
+                artifacts.stream()
                 .filter(offlinelink::include)
-                .map(JavadocArtifact::new)
                 .collect(toCollection(LinkedHashSet::new));
 
             for (Artifact artifact : set) {
@@ -170,7 +209,8 @@ public class GenerateOptionsFileMojo extends AbstractJavadocMojo {
                     log.info("Resolving {}...", artifact);
 
                     try {
-                        map.put(resolver.resolveArtifact(request, artifact).getArtifact(), offlinelink.getUrl(artifact));
+                        map.putIfAbsent(resolver.resolveArtifact(request, artifact).getArtifact(),
+                                        offlinelink.getUrl(artifact));
                     } catch (Exception exception) {
                         log.warn("{}: {}", artifact, exception.getMessage());
                         log.debug("{}", exception);
@@ -185,21 +225,6 @@ public class GenerateOptionsFileMojo extends AbstractJavadocMojo {
         }
 
         return map;
-    }
-
-    private Set<Artifact> getJavadocJarDependencyManagementSet() {
-        Set<Artifact> set =
-            Stream.of(project.getDependencies(),
-                      project.getDependencyManagement().getDependencies())
-            .filter(Objects::nonNull)
-            .flatMap(Collection::stream)
-            .filter(t -> isBlank(t.getClassifier()))
-            .filter(t -> Objects.equals(t.getType(), "jar"))
-            .filter(t -> (! isBlank(t.getVersion())))
-            .map(t -> new JavadocArtifact(t.getGroupId(), t.getArtifactId(), t.getVersion()))
-            .collect(toCollection(LinkedHashSet::new));
-
-        return set;
     }
 
     private ProjectBuildingRequest getProjectBuildingRequest() {
@@ -273,6 +298,14 @@ public class GenerateOptionsFileMojo extends AbstractJavadocMojo {
     }
 
     private class JavadocArtifact extends DefaultArtifact {
+        public JavadocArtifact(Artifact artifact) {
+            this(artifact.getGroupId(), artifact.getArtifactId(), artifact.getVersion());
+        }
+
+        public JavadocArtifact(Dependency dependency) {
+            this(dependency.getGroupId(), dependency.getArtifactId(), dependency.getVersion());
+        }
+
         public JavadocArtifact(String gav) { this(gav.split("[:]")); }
 
         public JavadocArtifact(String... gav) {
@@ -280,10 +313,6 @@ public class GenerateOptionsFileMojo extends AbstractJavadocMojo {
                   gav.length > 1 ? gav[1] : EMPTY,
                   gav.length > 2 ? gav[gav.length - 1] : EMPTY,
                   EMPTY, "jar", "javadoc", manager.getArtifactHandler("jar"));
-        }
-
-        public JavadocArtifact(Artifact artifact) {
-            this(artifact.getGroupId(), artifact.getArtifactId(), artifact.getVersion());
         }
     }
 }
