@@ -1,5 +1,9 @@
 2021-08-07  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ball/maven/plugins/javadoc/GenerateOptionsFileMojo.java:
+	Added boolean <includeDependencyManagement/> configuration
+	parameter (default: false).
+
 	* src/main/java/ball/maven/plugins/javadoc/AbstractJavadocMojo.java:
 	Added getDependencyManagementStream(MavenProject) method.
 
